--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^9"
+    "phpunit/phpunit": "^9",
+    "lukaswhite/directory": "^0.0.1"
   }
 }
