--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
   ],
   "require": {
     "phpseclib/phpseclib": "2.*",
-    "squizlabs/php_codesniffer": "3.5.*",
-    "influxdb/influxdb-php": "^1.15"
+    "influxdb/influxdb-php": "^1.15",
+    "ext-curl": "*"
   },
 
   "autoload": {
@@ -23,6 +23,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
-    "lukaswhite/directory": "^0.0.1"
+    "lukaswhite/directory": "^0.0.1",
+    "squizlabs/php_codesniffer": "3.5.*"
   }
 }
